--- a/src/layouts/GallerySection.astro
+++ b/src/layouts/GallerySection.astro
@@ -19,6 +19,29 @@ import quitsSrc from "../images/luca-quits.png";
 import lunchSrc from "../images/lunch-break.png";
 import whatSrc from "../images/what.png";
 import backendSrc from "../images/backend.png";
+import fiorenzoSrc from "../images/fiorenzo-ha-sempre-ragione.png";
+import bombSrc from "../images/adriano-bomb.png";
+import adrianoneSrc from "../images/adrianone.png";
+import chatgrtSrc from "../images/chatgrt.png";
+import taskSrc from "../images/sti-task.png";
+import sushiSrc from "../images/sushi.png";
+import fightSrc from "../images/the-fight.png";
+import stringheSrc from "../images/bestemmie-e-stringhe.png";
+import rubiamoSrc from "../images/ce-rubamo-er-codice.png";
+import deployaSrc from "../images/deploya.png";
+import tramontoSrc from "../images/economico-tramonto.png";
+import qadraSrc from "../images/qadra-mangrovia.png";
+import mokaSrc from "../images/la-moka.png";
+import cursor1Src from "../images/cursor-eiii.png";
+import stressSrc from "../images/stress-level-fiorenzo.png";
+import urloSrc from "../images/i-dont-work-here.png";
+import panicSrc from "../images/help-commit-fax.png";
+import scarfaceSrc from "../images/scarface.png";
+import gattiSrc from "../images/gatti.png";
+import sindaco2Src from "../images/sindaco-salaa.png";
+import showerSrc from "../images/shower-thoughts.png";
+import cursor2Src from "../images/cursooor.png";
+import bagnoSrc from "../images/dove-il-bagno.png";
 ---
 
 <div class="pt-3 overflow-hidden relative border-collapse">
@@ -30,9 +53,10 @@ import backendSrc from "../images/backend.png";
     <GridImage src={faxSrc} title="Commit via Fax" width={1024} height={1024} />
     <GridImage src={bestemmieSrc} title="Bestemmie in comasco" width={1024} height={1024} />
   </div>
-  <div class="grid grid-cols-4 gap-0">
+  <div class="grid grid-cols-5 gap-0">
     <GridImage src={superSrc} title="Super Fiorenzo" width={1024} height={1536} />
     <GridImage src={quitsSrc} title="Adriano faints, Luca quits" width={1024} height={1536} />
+    <GridImage src={fiorenzoSrc} title="A Mangrovia Fiorenzo ha sempre ragione" width={1024} height={1536} />
     <GridImage src={whatSrc} title="Che cosa sta succedendo?" width={1024} height={1536} />
     <GridImage src={meteoriteSrc} title="La nona ora" width={1024} height={1536} />
   </div>
@@ -61,5 +85,45 @@ import backendSrc from "../images/backend.png";
       height={1024}
     />
     <GridImage src={backendSrc} title="È un bug del backend" width={1536} height={1024} />
+  </div>
+  <div class="grid grid-cols-6 gap-0">
+    <GridImage
+      src={bombSrc}
+      title="Adriano prova ad accendersi una sigaretta mandando in cortocircuito una batteria"
+      width={1024}
+      height={1024}
+    />
+    <GridImage src={chatgrtSrc} title="Ve lo fate co' ChatGRT!" width={1024} height={1024} />
+    <GridImage src={adrianoneSrc} title="Adrianone" width={1024} height={1024} />
+    <GridImage src={taskSrc} title="Nnamo co' sti task" width={1024} height={1024} />
+    <GridImage src={sushiSrc} title="Sushi" width={1024} height={1024} />
+    <GridImage src={fightSrc} title="La battaglia" width={1024} height={1024} />
+  </div>
+  <div class="grid grid-cols-4 gap-0">
+    <GridImage src={stringheSrc} title="Le bestemmie e la teoria delle stringhe" width={1536} height={1024} />
+    <GridImage src={rubiamoSrc} title="Stavolta ce rubamo er codiceee" width={1536} height={1024} />
+    <GridImage src={deployaSrc} title="Deploya!" width={1536} height={1024} />
+    <GridImage src={tramontoSrc} title="Un economico tramonto" width={1536} height={1024} />
+  </div>
+  <div class="grid grid-cols-6 gap-0">
+    <GridImage src={mokaSrc} title="La moka sul fuoco" width={1536} height={1024} />
+    <GridImage src={qadraSrc} title="Il merge Qadra-Mangrovia" width={1536} height={1024} />
+    <GridImage src={stressSrc} title="Strees enhancing" width={1536} height={1024} />
+    <GridImage src={cursor1Src} title="Eiiiii!" width={1536} height={1024} />
+    <GridImage src={panicSrc} title="DON'T PANIC" width={1536} height={1024} />
+    <GridImage src={urloSrc} title="L'urlo" width={1536} height={1024} />
+  </div>
+  <div class="grid grid-cols-6 gap-0">
+    <GridImage src={gattiSrc} title="Because the gatti" width={1536} height={1024} />
+    <GridImage src={sindaco2Src} title="Sindaco Salaaaaa again" width={1536} height={1024} />
+    <GridImage src={showerSrc} title="Shower thoughts" width={1536} height={1024} />
+    <GridImage
+      src={scarfaceSrc}
+      title="Lo sai che significa capitalismo? Fregare la gente"
+      width={1536}
+      height={1024}
+    />
+    <GridImage src={cursor2Src} title="Cursooor" width={1536} height={1024} />
+    <GridImage src={bagnoSrc} title="Scusi dov'è il bagno?" width={1536} height={1024} />
   </div>
 </div>
