fix: Update grid layout in `GallerySection` for responsiveness

--- a/src/layouts/GallerySection.astro
+++ b/src/layouts/GallerySection.astro
@@ -48,30 +48,30 @@ import bagnoSrc from "../images/dove-il-bagno.png";
   <div class="grid grid-gap-4">
     <GridImage src={multiversoSrc} title="Multiverso Mangrovia" width={1536} height={1024} />
   </div>
-  <div class="grid grid-cols-3 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-3 gap-0">
     <GridImage src={tabSrc} title="TAB TAB TAB TAB!!!" width={1024} height={1024} />
     <GridImage src={faxSrc} title="Commit via Fax" width={1024} height={1024} />
     <GridImage src={bestemmieSrc} title="Bestemmie in comasco" width={1024} height={1024} />
   </div>
-  <div class="grid grid-cols-5 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-5 gap-0">
     <GridImage src={superSrc} title="Super Fiorenzo" width={1024} height={1536} />
     <GridImage src={quitsSrc} title="Adriano faints, Luca quits" width={1024} height={1536} />
     <GridImage src={fiorenzoSrc} title="A Mangrovia Fiorenzo ha sempre ragione" width={1024} height={1536} />
     <GridImage src={whatSrc} title="Che cosa sta succedendo?" width={1024} height={1536} />
     <GridImage src={meteoriteSrc} title="La nona ora" width={1024} height={1536} />
   </div>
-  <div class="grid grid-cols-3 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-3 gap-0">
     <GridImage src={sindacoSrc} title="Sindaco Salaaaaa" width={1536} height={1024} />
     <GridImage src={cleanSrc} title="Clean Code e bestemmie" width={1536} height={1024} />
     <GridImage src={monacheSrc} title="Fare schifo dalle Monache" width={1536} height={1024} />
   </div>
-  <div class="grid grid-cols-4 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-0">
     <GridImage src={adrianiSrc} title="Adriano, la serie" width={1024} height={1024} />
     <GridImage src={economicoSrc} title="Economico Programmatore" width={1024} height={1024} />
     <GridImage src={rabbiaSrc} title="RABBIA!!" width={1024} height={1024} />
     <GridImage src={nuovoSrc} title="Il nuovo team di Frontend" width={1024} height={1024} />
   </div>
-  <div class="grid grid-cols-3 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-3 gap-0">
     <GridImage
       src={criminiSrc}
       title="Padre, ho fatto cose per le quali il Dio della Biomeccanica non ti farebbe entrare in Paradiso"
@@ -86,7 +86,7 @@ import bagnoSrc from "../images/dove-il-bagno.png";
     />
     <GridImage src={backendSrc} title="È un bug del backend" width={1536} height={1024} />
   </div>
-  <div class="grid grid-cols-6 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-6 gap-0">
     <GridImage
       src={bombSrc}
       title="Adriano prova ad accendersi una sigaretta mandando in cortocircuito una batteria"
@@ -99,13 +99,13 @@ import bagnoSrc from "../images/dove-il-bagno.png";
     <GridImage src={sushiSrc} title="Sushi" width={1024} height={1024} />
     <GridImage src={fightSrc} title="La battaglia" width={1024} height={1024} />
   </div>
-  <div class="grid grid-cols-4 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-0">
     <GridImage src={stringheSrc} title="Le bestemmie e la teoria delle stringhe" width={1536} height={1024} />
     <GridImage src={rubiamoSrc} title="Stavolta ce rubamo er codiceee" width={1536} height={1024} />
     <GridImage src={deployaSrc} title="Deploya!" width={1536} height={1024} />
     <GridImage src={tramontoSrc} title="Un economico tramonto" width={1536} height={1024} />
   </div>
-  <div class="grid grid-cols-6 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-6 gap-0">
     <GridImage src={mokaSrc} title="La moka sul fuoco" width={1536} height={1024} />
     <GridImage src={qadraSrc} title="Il merge Qadra-Mangrovia" width={1536} height={1024} />
     <GridImage src={stressSrc} title="Strees enhancing" width={1536} height={1024} />
@@ -113,7 +113,7 @@ import bagnoSrc from "../images/dove-il-bagno.png";
     <GridImage src={panicSrc} title="DON'T PANIC" width={1536} height={1024} />
     <GridImage src={urloSrc} title="L'urlo" width={1536} height={1024} />
   </div>
-  <div class="grid grid-cols-6 gap-0">
+  <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-6 gap-0">
     <GridImage src={gattiSrc} title="Because the gatti" width={1536} height={1024} />
     <GridImage src={sindaco2Src} title="Sindaco Salaaaaa again" width={1536} height={1024} />
     <GridImage src={showerSrc} title="Shower thoughts" width={1536} height={1024} />
