fix: update `GallerySection` layout and add new image

--- a/src/layouts/GallerySection.astro
+++ b/src/layouts/GallerySection.astro
@@ -42,6 +42,7 @@ import sindaco2Src from "../images/sindaco-salaa.png";
 import showerSrc from "../images/shower-thoughts.png";
 import cursor2Src from "../images/cursooor.png";
 import bagnoSrc from "../images/dove-il-bagno.png";
+import mattiaSrc from "../images/faccio-io.png";
 ---
 
 <div class="pt-3 overflow-hidden relative border-collapse">
@@ -105,15 +106,7 @@ import bagnoSrc from "../images/dove-il-bagno.png";
     <GridImage src={deployaSrc} title="Deploya!" width={1536} height={1024} />
     <GridImage src={tramontoSrc} title="Un economico tramonto" width={1536} height={1024} />
   </div>
-  <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-6 gap-0">
-    <GridImage src={mokaSrc} title="La moka sul fuoco" width={1536} height={1024} />
-    <GridImage src={qadraSrc} title="Il merge Qadra-Mangrovia" width={1536} height={1024} />
-    <GridImage src={stressSrc} title="Strees enhancing" width={1536} height={1024} />
-    <GridImage src={cursor1Src} title="Eiiiii!" width={1536} height={1024} />
-    <GridImage src={panicSrc} title="DON'T PANIC" width={1536} height={1024} />
-    <GridImage src={urloSrc} title="L'urlo" width={1536} height={1024} />
-  </div>
-  <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-6 gap-0">
+  <div class="grid grid-cols-1 md:grid-cols-7 gap-0">
     <GridImage src={gattiSrc} title="Because the gatti" width={1536} height={1024} />
     <GridImage src={sindaco2Src} title="Sindaco Salaaaaa again" width={1536} height={1024} />
     <GridImage src={showerSrc} title="Shower thoughts" width={1536} height={1024} />
@@ -125,5 +118,14 @@ import bagnoSrc from "../images/dove-il-bagno.png";
     />
     <GridImage src={cursor2Src} title="Cursooor" width={1536} height={1024} />
     <GridImage src={bagnoSrc} title="Scusi dov'è il bagno?" width={1536} height={1024} />
+    <GridImage src={mattiaSrc} title="Faccio io!" width={1536} height={1024} />
+  </div>
+  <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-6 gap-0">
+    <GridImage src={mokaSrc} title="La moka sul fuoco" width={1536} height={1024} />
+    <GridImage src={qadraSrc} title="Il merge Qadra-Mangrovia" width={1536} height={1024} />
+    <GridImage src={stressSrc} title="Strees enhancing" width={1536} height={1024} />
+    <GridImage src={cursor1Src} title="Eiiiii!" width={1536} height={1024} />
+    <GridImage src={panicSrc} title="DON'T PANIC" width={1536} height={1024} />
+    <GridImage src={urloSrc} title="L'urlo" width={1536} height={1024} />
   </div>
 </div>
