fix: update background image and layout for `HomeHero`

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,8 @@ import Button from "../components/Button.astro";
   <HomeHero />
   <MerchSection />
   <TiersSection link="https://freedomflotilla.info/sostieni-freedom-flotilla-italia/" />
-  <TestimonialSection />
-  <FaqSection />
+  <div class="bg-mang bg-[url(/images/bg-hero-tiled.webp)] bg-center bg-fixed">
+    <TestimonialSection />
+    <FaqSection />
+  </div>
 </Layout>
