--- a/src/layouts/HomeHero.astro
+++ b/src/layouts/HomeHero.astro
@@ -4,7 +4,7 @@ import Currency from "../components/Currency.astro";
 ---
 
 <div class="pt-3">
-  <section class="relative bg-mang bg-[url(/images/bg-hero.webp)] bg-contain bg-center">
+  <section class="relative bg-mang bg-[url(/images/bg-hero-tiled.webp)] bg-center bg-fixed">
     <div class="mx-auto max-w-6xl px-4 py-16 md:py-24 grid md:grid-cols-2 gap-10 items-center">
       <div>
         <h1 class="mt-5 text-4xl md:text-5xl leading-[1.1] tracking-wider">
